// Copyright (c) 2023 - Restate Software, Inc., Restate GmbH
//
// This file is part of the Restate e2e tests,
// which are released under the MIT license.
//
// You can find a copy of the license in file LICENSE in the root
// directory of this repository or package, or at
// https://github.com/restatedev/e2e/blob/main/LICENSE

syntax = "proto3";

option java_package = "dev.restate.e2e.services.canceltest";
option java_outer_classname = "CancelTestProto";

import "google/protobuf/empty.proto";
import "dev/restate/ext.proto";

package cancel_test;

service CancelTestService {
  option (dev.restate.ext.service_type) = SINGLETON;

  rpc StartTest(BlockingRequest) returns (google.protobuf.Empty);
  rpc VerifyTest(google.protobuf.Empty) returns (Response);
}

enum BlockingOperation {
  CALL = 0;
  SLEEP = 1;
  AWAKEABLE = 2;
}

message BlockingRequest {
  BlockingOperation operation = 1;
}

message Response {
  bool is_canceled = 1;
}

service BlockingService {
  option (dev.restate.ext.service_type) = SINGLETON;

  rpc Block(BlockingRequest) returns (google.protobuf.Empty);
  rpc IsUnlocked(google.protobuf.Empty) returns (google.protobuf.Empty);
}